# strata-client

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .lintstagedrc.json  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  Cargo.toml  NOTICE  README.md  SECURITY.md  SUPPORT.md  WHATSNEW.md  deny.toml  docker-compose.dev.yml  docker-compose.dmz-chaos.yml  docker-compose.dmz-edge.yml  docker-compose.dmz-only.yml  docker-compose.dmz.yml  docker-compose.ghcr.yml  docker-compose.internal.yml  docker-compose.vdi.yml  docker-compose.yml  osv-scanner.toml  package-lock.json  package.json  renovate.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/codeql/: codeql-config.yml
.github/workflows/: build-guacd.yml  ci.yml  codeql.yml  dependency-review.yml  dmz-deps.yml  release-drafter.yml  release.yml  scorecard.yml  stale.yml  trivy.yml
.husky/: pre-commit
backend/: .dockerignore  Cargo.toml  Dockerfile  audit.toml  build.rs  cargo_test_out.txt  entrypoint.sh  osv-scanner.toml
backend/.cargo/: audit.toml
backend/chromium-policies/: strata.json
backend/migrations/: 001_initial_schema.sql  002_local_auth.sql  003_connection_sharing.sql  004_last_accessed.sql  005_favorites.sql  006_groups_and_description.sql  007_share_mode.sql  008_credential_profiles.sql  009_credential_expiry.sql  010_profile_ttl.sql  011_multi_kerberos.sql  012_ad_sync.sql  013_keytab_auth.sql  014_ca_cert.sql  015_multi_search_base.sql  016_connections_updated_at.sql  017_indexes_and_constraints.sql  018_share_token_index.sql  019_ad_sync_unique_constraint.sql  020_user_email_and_name.sql  021_soft_delete_and_permissions.sql  022_extended_permissions.sql  023_rename_groups_to_folders.sql  024_role_folders.sql  025_ad_sync_connection_defaults.sql  026_user_last_accessed.sql  027_recordings_table.sql  028_time_settings.sql  029_case_insensitive_email.sql  029_recording_bandwidth.sql  030_case_insensitive_email.sql  031_active_sessions.sql  032_connection_watermark.sql  033_can_view_sessions.sql  034_terms_acceptance.sql  035_user_tags.sql  036_admin_tags.sql  037_audit_logs_set_null.sql  038_indexes_and_not_null.sql  038_revoked_tokens_and_indexes.sql  (+40 more)
backend/src/: config.rs  error.rs  main.rs  tunnel.rs
backend/src/db/: mod.rs  pool.rs
backend/src/routes/: admin.rs  auth.rs  certs.rs  files.rs  health.rs  mod.rs  notifications.rs  outbound_shares.rs  roadmap.rs  setup.rs  share.rs  tunnel.rs  user.rs
backend/src/routes/admin/: dmz.rs  recordings.rs  safeguard.rs
backend/src/services/: active_sessions.rs  ad_sync.rs  ad_sync_admin.rs  admin_tags.rs  app_state.rs  audit.rs  auth.rs  av.rs  checkouts.rs  circuit_breaker.rs  co_pilot.rs  connections.rs  credential_profiles.rs  display.rs  edge_header.rs  favorites.rs  file_store.rs  guacd_pool.rs  health_check.rs  http_client.rs  idempotency.rs  kerberos.rs  kerberos_realms.rs  kubernetes.rs  middleware.rs  mod.rs  notifications.rs  outbound_share_ingest.rs  outbound_shares.rs  password.rs  recordings.rs  request_id.rs  retry.rs  roles.rs  schema.rs  serde_helpers.rs  session_cleanup.rs  session_registry.rs  settings.rs  shares.rs  (+18 more)
backend/src/services/co_pilot/: room.rs
backend/src/services/dmz_link/: config.rs  connector.rs  h2_serve.rs  mod.rs  registry.rs  resume.rs  router_adapter.rs  supervisor.rs  tls.rs  upgrade_handler.rs
backend/src/services/email/: message.rs  mod.rs  outlook.rs  smtp.rs  templates.rs  transport.rs  worker.rs
backend/src/services/email/templates/: checkout_approved.mjml  checkout_approved.txt.tera  checkout_pending.mjml  checkout_pending.txt.tera  checkout_rejected.mjml  checkout_rejected.txt.tera  checkout_self_approved.mjml  checkout_self_approved.txt.tera  outbound_share_pending.mjml  outbound_share_pending.txt.tera
backend/src/services/safeguard/: client.rs  config.rs  enrolment.rs  mod.rs  password_cache.rs  pending_requests.rs  user_token.rs
backend/tests/: README.md  db_smoke.rs
certs/dmz/: ca.srl
clamav/: clamd.conf  freshclam.conf
contrib/vdi-kali/: Dockerfile  README.md  entrypoint.sh
crates/strata-dmz/: Cargo.toml  Dockerfile
crates/strata-dmz/src/: body_caps.rs  config.rs  edge_signer.rs  limits.rs  main.rs  operator.rs  proxy.rs  public_server.rs  public_tls.rs  ws_proxy.rs
crates/strata-dmz/src/link_server/: listener.rs  mod.rs  registry.rs  tls.rs
crates/strata-protocol/: Cargo.toml
crates/strata-protocol/fuzz/: Cargo.toml  README.md
crates/strata-protocol/fuzz/fuzz_targets/: edge_header_verify.rs  frame_decoder.rs  handshake_challenge.rs  handshake_hello.rs
crates/strata-protocol/src/: backoff.rs  edge_header.rs  errors.rs  frame.rs  handshake.rs  lib.rs  link.rs  resume_token.rs  versioning.rs
docs/: API-LIFECYCLE.md  Configure-RdpAvc444.ps1  DOCUMENTATION_STANDARDS.md  RELEASE_PROCESS.md  api-reference.md  architecture.md  av-scanning.md  compliance-tracker.md  deployment-kubernetes.md  deployment.md  dmz-implementation-plan.md  dmz.md  faq.md  h264-passthrough.md  roadmap.md  safeguard-user-guide.md  safeguard.md  security.md  threat-model.md  tunnel.md  ubuntu-vm-deployment.md  vdi.md  web-sessions.md
e2e/: _r.txt  package-lock.json  package.json  playwright.config.ts
frontend/: .dockerignore  .prettierignore  Dockerfile  common.fragment  connection-upgrade.conf  coverage_out.txt  coverage_output.txt  coverage_result.txt  eslint.config.js  fail_check.txt  final_fail.txt  final_fail_3.txt  final_fail_4.txt  final_fail_5.txt  final_fail_6.txt  final_fail_7.txt  final_fail_8.txt  final_fail_9.txt  full_test_output.txt  http_only.conf  https_enabled.conf  index.html  nginx.conf  njs.conf  out.txt  package-lock.json  package.json  remove_server.js  ssl-init.sh  test_output.txt  test_results.txt  test_results_2.txt  vite.config.ts  vitest.config.ts  vitest.out  vitest_out.txt  vitest_run_out.txt
guacd/: Dockerfile  entrypoint.sh
scripts/: diagnose-av.sh  verify-image.sh
(+279 files in other folders)
