[workspace]
resolver = "2"
members = [
    "backend",
    "crates/strata-protocol",
    "crates/strata-dmz",
]

[workspace.package]
version = "1.4.1"
edition = "2021"
license = "Apache-2.0"
authors = ["Strata Client contributors"]
repository = "https://github.com/Bails309/strata-client"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io", "rt"] }
futures-util = "0.3"
bytes = "1"

# Web framework
axum = { version = "0.8", features = ["ws", "macros", "multipart"] }
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs", "request-id", "limit", "timeout"] }

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Crypto / hashing
hmac = "0.13"
sha2 = "0.11"
rand = "0.10"
base64 = "0.22"
zeroize = { version = "1", features = ["derive"] }

# TLS
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-pki-types = { version = "1", features = ["std"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls-pemfile = "2"

# HTTP/2 link transport
h2 = "0.4"
http = "1"
http-body = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["server", "server-auto", "tokio"] }

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Observability
axum-prometheus = "0.10"

# Errors
thiserror = "2"
anyhow = "1"

# IDs / time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
