[package]
name = "strata-backend"
version = "0.22.0"
edition = "2021"
description = "Strata Client – Rust backend proxy and API for Apache Guacamole"
license = "Apache-2.0"

[[bin]]
name = "strata-backend"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["ws", "macros", "multipart"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs", "request-id"] }

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"

# Database
sqlx = { version = "0.8.1", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
] }

# Auth / JWT / OIDC
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }

# Cryptography (envelope encryption)
aes-gcm = "0.10"
rand = "0.9.3"
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
zeroize = { version = "1", features = ["derive"] }
argon2 = "0.5"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Streaming
tokio-util = { version = "0.7", features = ["io", "rt"] }
futures-util = "0.3"
bytes = "1"

# LDAP (Active Directory sync)
ldap3 = { version = "0.12", default-features = false, features = ["tls-rustls-ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-pemfile = "2"
rustls-native-certs = "0.8"

# Misc
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
dotenvy = "0.15"
scopeguard = "1"
urlencoding = "2.1"
tempfile = "3"
sysinfo = "0.38"
# Magic-number / MIME detection for uploads (W3-6)
infer = { version = "0.19", default-features = false }
# Prometheus /metrics endpoint (W3-12)
axum-prometheus = "0.7"

[profile.release]
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
