[package]
name = "strata-backend"
version = "0.30.0"
edition = "2021"
description = "Strata Client – Rust backend proxy and API for Apache Guacamole"
license = "Apache-2.0"

[[bin]]
name = "strata-backend"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["ws", "macros", "multipart"] }
axum-extra = { version = "0.12", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs", "request-id"] }

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"

# Database
sqlx = { version = "0.8.1", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
] }

# Auth / JWT / OIDC
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }

# Cryptography (envelope encryption)
aes-gcm = "0.10"
# Chromium Login Data password store (rustguac parity, web sessions): the
# Linux `--password-store=basic` profile uses AES-128-CBC with a key derived
# via PBKDF2-HMAC-SHA1 from the literal "peanuts" passphrase + "saltysalt"
# salt. RustCrypto split-crate ecosystem; small self-contained deps.
aes = "0.8"
cbc = { version = "0.1", features = ["std"] }
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac"] }
sha1 = "0.10"
rand = "0.10"
base64 = "0.22"
sha2 = "0.11"
hmac = "0.13"
hex = "0.4"
zeroize = { version = "1", features = ["derive"] }
argon2 = "0.5"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Streaming
tokio-util = { version = "0.7", features = ["io", "rt"] }
futures-util = "0.3"
bytes = "1"

# LDAP (Active Directory sync)
ldap3 = { version = "0.12", default-features = false, features = ["tls-rustls-ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-pemfile = "2"
rustls-native-certs = "0.8"

# Misc
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
dotenvy = "0.15"
scopeguard = "1"
urlencoding = "2.1"
tempfile = "3"
sysinfo = "0.38"
# Magic-number / MIME detection for uploads (W3-6)
infer = { version = "0.19", default-features = false }
# Prometheus /metrics endpoint (W3-12)
axum-prometheus = "0.7"

# Email notifications (v0.25.0)
# lettre  — async SMTP transport over rustls (no OpenSSL dep on alpine).
# mrml    — MJML → responsive HTML compiler, templates pre-compiled at boot.
# tera    — Jinja-style context substitution for both HTML and plaintext twins.
# (User-supplied text is XML-escaped inline — see services/email/templates.rs.)
lettre = { version = "0.11", default-features = false, features = [
    "builder",
    "smtp-transport",
    "tokio1-rustls-tls",
    "hostname",
    "pool",
] }
mrml = { version = "5", default-features = false, features = ["parse", "render"] }
tera = { version = "1", default-features = false }
async-trait = "0.1"

# Web Browser Sessions (rustguac parity, Phase 2 — see
# docs/runbooks/rustguac-parity-tracker.md)
# `ipnet`  — CIDR parsing for the `web_allowed_networks` egress allow-list.
# `url`    — host extraction from connection URLs before the CIDR check.
ipnet = "2"
url = "2"

# VDI Desktop Containers (rustguac parity, Phase 3 — see
# docs/runbooks/rustguac-parity-tracker.md). `bollard` talks to the
# Docker Engine API over /var/run/docker.sock. The dependency is
# pulled in unconditionally because the trait surface is shared, but
# `DockerVdiDriver` is only constructed when the operator opts in via
# the `docker-compose.vdi.yml` overlay (which mounts docker.sock into
# the backend — see the ⚠️ HOST-ROOT MOUNT warning at the top of
# that file).
#
# Default features are kept on — the unix-socket transport is gated
# behind the default `ssl` feature in bollard 0.18 (it brings in the
# hyper-unix-connector). Stripping defaults makes bollard reject the
# `unix:///var/run/docker.sock` URI at runtime with "URI scheme is
# not supported". Debian trixie-slim already ships libssl3 for
# chromium so the OpenSSL transitive dep costs us nothing.
bollard = "0.18"

# rusqlite — Chromium `Login Data` SQLite writer for the web-session
# autofill path (rustguac parity C4). `bundled` ships libsqlite3
# statically so the file format is locked to a known SQLite version
# and operators don't need a system libsqlite3 in the runtime image.
# The file we write is per-session ephemeral, no migrations, no async
# — sqlx is the wrong tool here.
#
# Pinned to 0.33 (not rustguac's 0.39) because both crates declare
# `links = "sqlite3"` and Cargo allows only one version of
# libsqlite3-sys per build graph. sqlx 0.8.x pins libsqlite3-sys
# ^0.30.1; rusqlite 0.33 is the version that also uses
# libsqlite3-sys ^0.30 (0.34 jumps to 0.32, 0.39 to 0.37). The API
# surface we touch (Connection::open, execute_batch, prepare,
# params!, query_row) is unchanged across these releases, so this is
# a transparent downgrade. Bump alongside sqlx when sqlx adopts a
# newer libsqlite3-sys.
rusqlite = { version = "0.32", features = ["bundled"] }

[profile.release]
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
