[package]
name = "strata-protocol-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

# Detached from the workspace -- libfuzzer-sys requires nightly +
# special profile flags that don't compose with the rest of the tree.
[workspace]

[dependencies]
libfuzzer-sys = "0.4"
strata-protocol = { path = ".." }
serde_json = "1"

[[bin]]
name = "handshake_hello"
path = "fuzz_targets/handshake_hello.rs"
test = false
doc = false

[[bin]]
name = "handshake_challenge"
path = "fuzz_targets/handshake_challenge.rs"
test = false
doc = false

[[bin]]
name = "edge_header_verify"
path = "fuzz_targets/edge_header_verify.rs"
test = false
doc = false

[[bin]]
name = "frame_decoder"
path = "fuzz_targets/frame_decoder.rs"
test = false
doc = false
